@@ -94,37 +94,13 @@ CMS GC 控制
 ((DirectBuffer) buffer).cleaner().clean();
 ```
 
--server -XX:-UseBiasedLocking -Xms2100m -Xmx2100m -XX:NewSize=1500m -XX:MaxMetaspaceSize=32m -XX:MaxDirectMemorySize=1G -XX:+UseG1GC
+-server -XX:-UseBiasedLocking -Xms2100m -Xmx2100m -XX:NewSize=1500m -XX:MaxMetaspaceSize=32m -XX:MaxDirectMemorySize=1G -XX:+UseG1GC -XX:-RestrictContended
+
+-server -Xms2560m -Xmx2560m -XX:MaxDirectMemorySize=1024m -XX:NewRatio=4 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:-UseBiasedLocking -XX:-RestrictContended
 
 #### range缓存算法
 
-1024 个分区 每个分区 256M
-可用内存 1024M
-缓存粒度（预读粒度）：一个分区
-共计 4 个缓存块
 
-cacheItem 4
-
-class CacheItem{
-    int dbIndex;
-    int readRef;
-    boolean canRead;
-    ByteBuffer buffer;
-}
-
-64 个 visit 线程
-
-
-4 个 fetch 线程
-
-for(int i=0;i<partitionNum;i++){
-    while(true){
-        if(cacheItem[window].readRef == 0) {
-          break;
-        }
-    }
-    load(cacheItem[window].buffer);
-}
 
 
 
